Fix alignments

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,17 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0 auto;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
+}
+
+.dark-mode {
+  background-color: #22272e;
 }
 
 .display-1 {
@@ -15,6 +23,21 @@ body {
   font-size: clamp(50px, 8vw, 110px);
   line-height: 100%;
   color: #1a2236;
+}
+body.dark-mode .display-1 {
+  color: #fff;
+}
+
+.par {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: -0.01em;
+  color: #1a2236;
+}
+body.dark-mode .par {
+  color: #fff;
 }
 
 .margin-x {
@@ -284,6 +307,12 @@ body {
   z-index: 10;
   transition: left 0.7s;
 }
+body.dark-mode .toolbar .nav-bar {
+  background-color: #2d333b;
+}
+body.dark-mode .toolbar .nav-bar .nav-link a {
+  color: #fff;
+}
 @media (min-width: 992px) {
   .toolbar .nav-bar {
     left: 0;
@@ -305,7 +334,18 @@ body {
     display: none;
   }
 }
-.toolbar .nav-bar .top-section .nav-bar-mobile-bottom {
+.toolbar .nav-bar .top-section .close-button {
+  color: #1a2236;
+  font-size: 30px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+@media (min-width: 992px) {
+  .toolbar .nav-bar .top-section .close-button {
+    display: none;
+  }
+}
+.toolbar .nav-bar .nav-bar-mobile-bottom {
   position: absolute;
   height: 150px;
   width: 320px;
@@ -315,18 +355,7 @@ body {
   background-image: url(../../assets/images/IntroSection/nav-bar-bottom.svg);
 }
 @media (min-width: 992px) {
-  .toolbar .nav-bar .top-section .nav-bar-mobile-bottom {
-    display: none;
-  }
-}
-.toolbar .nav-bar .top-section .close-button {
-  color: #1a2236;
-  font-size: 30px;
-  margin-right: 20px;
-  margin-top: 20px;
-}
-@media (min-width: 992px) {
-  .toolbar .nav-bar .top-section .close-button {
+  .toolbar .nav-bar .nav-bar-mobile-bottom {
     display: none;
   }
 }
@@ -340,6 +369,63 @@ body {
   line-height: 48px;
   letter-spacing: 0;
   text-align: center;
+}
+.toolbar .nav-bar .nav-links .dark {
+  display: none;
+  line-height: 0;
+  border-radius: 30px;
+  position: relative;
+  width: 80px;
+  height: 44px;
+}
+.toolbar .nav-bar .nav-links .dark input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.toolbar .nav-bar .nav-links .dark input:checked + .slider {
+  background-color: #1a2236;
+  border-color: #fff;
+}
+.toolbar .nav-bar .nav-links .dark input:checked + .slider::after {
+  transform: translateX(-0.4px);
+  background-color: #fff;
+}
+.toolbar .nav-bar .nav-links .dark .far {
+  font-size: 30px;
+}
+.toolbar .nav-bar .nav-links .dark .fa-sun {
+  color: #fbc253;
+}
+.toolbar .nav-bar .nav-links .dark .fa-moon {
+  color: #fff;
+}
+.toolbar .nav-bar .nav-links .dark .slider {
+  position: absolute;
+  border: 4px solid #1a2236;
+  padding-inline: 5px;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 34px;
+  transition: background-color 0.7s;
+}
+.toolbar .nav-bar .nav-links .dark .slider::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: calc(100% + 2px);
+  background-color: #1a2236;
+  top: -1px;
+  left: 0;
+  transform: translateX(37px);
+  transition: transform 0.7s, background-color 0.7s;
+  border-radius: 50%;
 }
 .toolbar .nav-bar .nav-links a {
   text-decoration: none;
@@ -363,14 +449,6 @@ body {
   .intro-section {
     display: flex;
   }
-}
-.intro-section .par {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 21px;
-  letter-spacing: -0.01em;
-  color: #1a2236;
 }
 @media (min-width: 992px) {
   .intro-section .content {
@@ -953,6 +1031,14 @@ body {
 .footer-content .links-to-social li .link-to-social {
   color: #fff;
   font-size: 25px;
+}
+.footer-content .links-to-social li .link-to-social .fab {
+  transition: transform, color;
+  transition-duration: 0.7s;
+}
+.footer-content .links-to-social li .link-to-social .fab:hover {
+  color: #92dcdc;
+  transform: scale(1.5);
 }
 
 /*# sourceMappingURL=styles.css.map */
