--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -39,9 +39,16 @@ $grid-breakpoints: (
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0 auto;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
+}
+.dark-mode {
+  background-color: #22272e;
 }
 
 .display-1 {
@@ -52,6 +59,21 @@ body {
   font-size: clamp(50px, 8vw, 110px);
   line-height: 100%;
   color: $primary;
+  body.dark-mode & {
+    color: #fff;
+  }
+}
+
+.par {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: -0.01em;
+  color: $primary;
+  body.dark-mode & {
+    color: #fff;
+  }
 }
 
 .margin-x {
