--- a/styles/sections/_intro.scss
+++ b/styles/sections/_intro.scss
@@ -5,14 +5,7 @@
     display: flex;
   }
 
-  .par {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 21px;
-    letter-spacing: -0.01em;
-    color: $primary;
-  }
+ 
 
   .content {
     @include respond-above(lg) {
