--- a/styles/sections/_toolbar.scss
+++ b/styles/sections/_toolbar.scss
@@ -31,6 +31,14 @@
     left: -100%;
     z-index: 10;
     transition: left 0.7s;
+    body.dark-mode & {
+      background-color: #2d333b;
+      .nav-link {
+        a {
+          color: #fff;
+        }
+      }
+    }
 
     @include respond-above(lg) {
       left: 0;
@@ -53,19 +61,7 @@
           }
         }
 
-        &-bottom {
-          position: absolute;
-          height: 150px;
-          width: 320px;
-          left: 0;
-          top: calc(100% - 150px);
-          border-radius: 0;
-          background-image: url(../../assets/images/IntroSection/nav-bar-bottom.svg);
-
-          @include respond-above(lg) {
-            display: none;
-          }
-        }
+        
       }
 
       .close-button {
@@ -79,6 +75,19 @@
         }
       }
     }
+    .nav-bar-mobile-bottom {
+          position: absolute;
+          height: 150px;
+          width: 320px;
+          left: 0;
+          top: calc(100% - 150px);
+          border-radius: 0;
+          background-image: url(../../assets/images/IntroSection/nav-bar-bottom.svg);
+
+          @include respond-above(lg) {
+            display: none;
+          }
+        }
 
     .nav-links {
       list-style: none;
@@ -90,6 +99,69 @@
       line-height: 48px;
       letter-spacing: 0;
       text-align: center;
+
+      .dark {
+        display: none;
+        line-height: 0;
+        border-radius: 30px;
+        position: relative;
+        width: 80px;
+        height: 44px;
+
+        input {
+          position: absolute;
+          opacity: 0;
+          width: 0;
+          height: 0;
+          &:checked + .slider {
+            background-color: $primary;
+            border-color: #fff;
+            &::after {
+              transform: translateX(-0.4px);
+              background-color: #fff;
+            }
+          }
+        }
+
+        .far {
+          font-size: 30px;
+        }
+
+        .fa-sun {
+          color: #fbc253;
+        }
+
+        .fa-moon {
+          color: #fff;
+        }
+        .slider{
+          position: absolute;
+          border: 4px solid $primary;
+          padding-inline: 5px;
+          width: 100%;
+          height: 100%;
+          inset: 0;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          cursor: pointer;
+          border-radius: 34px;
+          transition: background-color 0.7s;
+
+            &::after {
+            content: '';
+            position: absolute;
+            width: 50%;
+            height: calc(100% + 2px);
+            background-color: $primary;
+            top: -1px;
+            left: 0;
+            transform: translateX(37px);
+            transition: transform 0.7s, background-color 0.7s;
+            border-radius: 50%;
+          }
+        }
+      }
 
       a {
         text-decoration: none;
